# Flstring

./: CHANGELOG.md  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  LICENSE.txt  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  aslr_construction_bench.cpp  comprehensive_bench.cpp  cross_library_bench.cpp  find_haystack_bench.cpp  performance_optimisation_benchmarks.cpp  pmr_vs_pool_bench.cpp  rope_rebalance_bench.cpp  rope_vs_std_string_benchmarks.cpp  string_vs_std_bench.cpp
benchmarks/folly_comparison/: benchmark_folly.cpp
docs/: API.md  Developer_Guide.md  Examples.md  Features.md  Formatting.md  Getting_Started.md  Issue_Triage_Playbook.md  PHILOSOPHY.md  Performance.md  README.md
docs/templates/: API_Compatibility_Report_Template.md  Bug_Triage_Report_Template.md  Performance_Regression_Report_Template.md  Release_Readiness_Report_Template.md
examples/: example_advanced_types.cpp  example_arena.cpp  example_basic.cpp  example_builder.cpp  example_formatting.cpp  thread_safety_patterns.cpp
include/: fl.hpp
include/fl/: alloc_hooks.hpp  arena.hpp  builder.hpp  config.hpp  format.hpp  immutable_string.hpp  profiling.hpp  rope.hpp  sinks.hpp  string.hpp  substring_view.hpp  synchronised_string.hpp  synchronized_string.hpp
include/fl/debug/: thread_safety.hpp
tests/: fl_string_vs_std_full_output.txt  fl_string_vs_std_full_test.cpp  reproduce_missing_find.cpp  rope_linear_access_vs_std.cpp  test_adaptive_find.cpp  test_comprehensive_apis.cpp  test_new_apis.cpp  test_rope_access_index.cpp
